--- a/src/styles/CTA.module.scss
+++ b/src/styles/CTA.module.scss
@@ -6,7 +6,7 @@
   align-items: center;
   flex-wrap: wrap;
   gap: 4rem;
-  background-image: url(../assets/ctaBg.png);
+  background-image: url(../../public/assets/ctaBg.png);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
