--- a/src/styles/Features.module.scss
+++ b/src/styles/Features.module.scss
@@ -1,7 +1,7 @@
 .features {
   width: 100%;
   height: auto;
-  background-image: url(../assets/featuresBg.png);
+  background-image: url(../../public/assets/featuresBg.png);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
