--- a/src/styles/About.module.scss
+++ b/src/styles/About.module.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   padding-top: 120px;
-  background-image: url("../assets/hero-bg.png");
+  background-image: url("../../public/assets/hero-bg.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
