--- a/src/styles/About.module.scss
+++ b/src/styles/About.module.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   padding-top: 120px;
-  background-image: url("../../public/assets/hero-bg.png");
+  background-image: url("https://ik.imagekit.io/obelussoft/Revio/hero-bg_LI2PQ02a8.png?updatedAt=1684448814926");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
