--- a/src/styles/Features.module.scss
+++ b/src/styles/Features.module.scss
@@ -1,7 +1,7 @@
 .features {
   width: 100%;
   height: auto;
-  background-image: url(../../public/assets/featuresBg.png);
+  background-image: url("https://ik.imagekit.io/obelussoft/Revio/featuresBg_I5EYtSp4R.png?updatedAt=1684448815012");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
