--- a/src/styles/Hero.module.scss
+++ b/src/styles/Hero.module.scss
@@ -1,7 +1,7 @@
 .hero {
   width: 100%;
   min-height: 100vh;
-  background-image: url("../../public/assets/hero-bg.png");
+  background-image: url("https://ik.imagekit.io/obelussoft/Revio/hero-bg_LI2PQ02a8.png?updatedAt=1684448814926");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
