--- a/src/styles/About.module.scss
+++ b/src/styles/About.module.scss
@@ -78,6 +78,11 @@
         color: var(--green);
         font-weight: 600;
       }
+
+      .yellow {
+        color: var(--yellow);
+        font-weight: 600;
+      }
     }
 
     .boldP {
