--- a/src/styles/Apps.module.scss
+++ b/src/styles/Apps.module.scss
@@ -37,8 +37,20 @@
   }
 
   img {
-    width: auto;
-    height: auto;
-    object-fit: cover;
+    width: 180px;
+    height: 180px;
+    object-fit: contain;
+  }
+
+  .firstImg {
+    width: 100px;
+    height: 100px;
+    object-fit: contain;
+  }
+
+  .lastImg {
+    width: 90px;
+    height: 90px;
+    object-fit: contain;
   }
 }
