--- a/src/styles/CTA.module.scss
+++ b/src/styles/CTA.module.scss
@@ -12,6 +12,10 @@
   background-size: cover;
   padding: 4rem 1rem 0rem 1rem;
 
+  @media (max-width: 1137px) {
+    flex-direction: column-reverse;
+  }
+
   @media (max-width: 1113px) {
     text-align: center;
     padding-bottom: 4rem;
