--- a/src/styles/Contacts.module.scss
+++ b/src/styles/Contacts.module.scss
@@ -61,9 +61,7 @@
           padding: 0.5rem;
           outline: none;
           border: 1px solid #000;
-          border-top: 0;
-          border-left: 0;
-          border-right: 0;
+          border-radius: 10px;
         }
 
         textarea {
@@ -71,9 +69,7 @@
           padding: 0.5rem;
           outline: none;
           border: 1px solid #000;
-          border-top: 0;
-          border-left: 0;
-          border-right: 0;
+          border-radius: 10px;
         }
 
         h2 {
@@ -127,8 +123,13 @@
           }
         }
 
-        svg {
-          color: var(--green);
+        .facebook {
+          color: #3b5998;
+          font-size: 3rem;
+        }
+
+        .linkedin {
+          color: #0072b1;
           font-size: 3rem;
         }
       }
