--- a/src/styles/Popup.module.scss
+++ b/src/styles/Popup.module.scss
@@ -61,6 +61,7 @@
       background-color: transparent;
       color: #fff;
       border: 1px solid #fff;
+      border-radius: 10px;
     }
   }
 
@@ -87,7 +88,7 @@
     outline: none;
     border: 2px solid transparent;
     transition: 250ms ease-in-out;
-    background-color: var(--green);
+    background-color: var(--yellow);
     color: #fff;
     font-size: 1.2rem;
     border-radius: 10px;
@@ -95,7 +96,7 @@
     cursor: pointer;
 
     &:hover {
-      border: 2px solid var(--green);
+      border: 2px solid var(--yellow);
       background-color: transparent;
     }
   }
