--- a/src/styles/Testimonial.module.scss
+++ b/src/styles/Testimonial.module.scss
@@ -1,12 +1,13 @@
 .testimonial {
   width: 100%;
   max-width: 400px;
-  height: auto;
+  height: 100%;
+  min-height: 500px;
   position: relative;
   padding: 2rem;
   color: #fff;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   text-align: center;
   flex-direction: column;
@@ -43,5 +44,9 @@
   h5 {
     font-size: 1.2rem;
     margin: 0;
+  }
+
+  .testimonialText {
+    text-align: justify;
   }
 }
