--- a/src/styles/CTA.module.scss
+++ b/src/styles/CTA.module.scss
@@ -14,11 +14,11 @@
 
   @media (max-width: 1137px) {
     flex-direction: column-reverse;
+    text-align: center;
   }
 
   @media (max-width: 1113px) {
     text-align: center;
-    padding-bottom: 4rem;
   }
 
   h3 {
