--- a/src/styles/Input.module.scss
+++ b/src/styles/Input.module.scss
@@ -13,8 +13,8 @@
 
     input {
       width: 100%;
-      max-width: 400px;
-      min-width: 400px;
+      max-width: 300px;
+      min-width: 300px;
       border-top-left-radius: 20px;
       border-bottom-left-radius: 20px;
       outline: none;
@@ -31,6 +31,9 @@
     }
 
     button {
+      width: 100%;
+      min-width: 120px;
+      max-width: 120px;
       outline: none;
       border: none;
       border-top-right-radius: 20px;
