--- a/src/styles/About.module.scss
+++ b/src/styles/About.module.scss
@@ -36,7 +36,7 @@
 
   div {
     width: 100%;
-    max-width: 1600px;
+    max-width: 1200px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -71,8 +71,9 @@
     }
 
     p {
-      font-size: 1.2rem;
+      font-size: 1.4rem;
       margin: 2rem 0;
+      line-height: 1.5;
 
       span {
         color: var(--green);
