--- a/src/styles/Contacts.module.scss
+++ b/src/styles/Contacts.module.scss
@@ -60,16 +60,33 @@
           width: 100%;
           padding: 0.5rem;
           outline: none;
-          border: 1px solid #000;
-          border-radius: 10px;
+          border: 3px solid transparent;
+          border-radius: 20px;
+          background-image: linear-gradient(white, white),
+            linear-gradient(
+              180deg,
+              rgba(253, 185, 18, 1) 0%,
+              rgba(90, 185, 89, 1) 100%
+            );
+          background-origin: border-box;
+          background-clip: padding-box, border-box;
         }
 
         textarea {
           width: 100%;
           padding: 0.5rem;
           outline: none;
-          border: 1px solid #000;
-          border-radius: 10px;
+          resize: none;
+          border: 3px solid transparent;
+          border-radius: 20px;
+          background-image: linear-gradient(white, white),
+            linear-gradient(
+              180deg,
+              rgba(253, 185, 18, 1) 0%,
+              rgba(90, 185, 89, 1) 100%
+            );
+          background-origin: border-box;
+          background-clip: padding-box, border-box;
         }
 
         h2 {
@@ -78,15 +95,16 @@
 
         button {
           width: 100%;
-          max-width: 150px;
+          max-width: 160px;
           outline: none;
           border: 2px solid transparent;
           transition: 250ms ease-in-out;
           background-color: var(--green);
           color: #fff;
-          font-size: 1.2rem;
-          border-radius: 10px;
-          padding: 0.4rem 1rem;
+          font-size: 1.1rem;
+          border-radius: 20px;
+          padding: 0.5rem 1rem;
+          font-weight: 600;
           cursor: pointer;
 
           &:hover {
