--- a/src/styles/Popup.module.scss
+++ b/src/styles/Popup.module.scss
@@ -106,4 +106,16 @@
     position: absolute;
     bottom: 15px;
   }
+
+  .successfullySent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 10rem;
+
+    h4 {
+      font-size: 1.2rem;
+      color: var(--green);
+    }
+  }
 }
