--- a/src/styles/Popup.module.scss
+++ b/src/styles/Popup.module.scss
@@ -5,7 +5,7 @@
   transform: translate(-50%, -50%);
   width: 100%;
   max-width: 600px;
-  height: 500px;
+  height: 600px;
   background-color: var(--grey);
   box-shadow: 24;
   padding: 3rem 2rem;
@@ -18,6 +18,10 @@
   color: #fff;
   z-index: 999;
   border: 2px solid var(--green);
+
+  @media (max-width: 400px) {
+    height: 700px;
+  }
 
   .closeIcon {
     position: absolute;
