--- a/src/styles/Countdown.module.scss
+++ b/src/styles/Countdown.module.scss
@@ -1,9 +1,9 @@
 .container {
-  width: 100%;
+  width: 80%;
   color: #333;
   margin: 0 auto;
   text-align: center;
-  background-color: #ffd54f;
+  background-color: var(--yellow);
   border-radius: 10px;
 
   h1 {
@@ -22,7 +22,7 @@
 
     li {
       display: inline-block;
-      font-size: 1em;
+      font-size: 1rem;
       list-style-type: none;
       padding: 0.5em 1em;
       text-transform: uppercase;
@@ -33,7 +33,7 @@
 
       span {
         display: block;
-        font-size: 1.5rem;
+        font-size: 1.2rem;
         font-weight: 500;
 
         @media all and (max-width: 768px) {
