--- a/src/styles/Popup.module.scss
+++ b/src/styles/Popup.module.scss
@@ -4,8 +4,8 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
-  max-width: 600px;
-  height: 650px;
+  max-width: 650px;
+  height: auto;
   background-color: var(--grey);
   box-shadow: 24;
   padding: 3rem 2rem;
@@ -18,6 +18,7 @@
   color: #fff;
   z-index: 999;
   border: 2px solid var(--green);
+  overflow: auto;
 
   @media (max-width: 400px) {
     height: 750px;
@@ -120,6 +121,31 @@
     h4 {
       font-size: 1.2rem;
       color: var(--green);
+    }
+  }
+
+  .agreeBox {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+
+    div {
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+      gap: 5px;
+      margin-bottom: 1rem;
+
+      input {
+        width: 15px;
+      }
+    }
+
+    p {
+      font-size: 0.9rem;
+      color: grey;
     }
   }
 }
