--- a/src/styles/Countdown.module.scss
+++ b/src/styles/Countdown.module.scss
@@ -6,6 +6,10 @@
   background-color: var(--yellow);
   border-radius: 10px;
 
+  @media (max-width: 574px) {
+    width: 100%;
+  }
+
   h1 {
     font-weight: normal;
     letter-spacing: 0.125rem;
