--- a/src/styles/Popup.module.scss
+++ b/src/styles/Popup.module.scss
@@ -1,15 +1,8 @@
 .popup {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   width: 100%;
-  max-width: 650px;
   height: auto;
   background-color: var(--grey);
   box-shadow: 24;
-  padding: 3rem 2rem;
-  border-radius: 10px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -19,9 +12,25 @@
   z-index: 999;
   border: 2px solid var(--green);
   overflow: auto;
+  min-height: calc(100vh - 120px);
+  margin-top: 120px;
+  padding: 4rem 6rem;
 
-  @media (max-width: 400px) {
-    height: 750px;
+  @media (max-width: 1150px) {
+    flex-wrap: wrap;
+    height: 100%;
+  }
+
+  @media (max-width: 880px) {
+    padding-top: 140px;
+  }
+
+  @media (max-width: 682px) {
+    padding-top: 170px;
+  }
+
+  @media (max-width: 479px) {
+    padding-top: 80px;
   }
 
   .closeIcon {
@@ -52,6 +61,7 @@
 
   .inputWrapper {
     width: 100%;
+    max-width: 880px;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -126,6 +136,7 @@
 
   .agreeBox {
     width: 100%;
+    max-width: 880px;
     display: flex;
     justify-content: center;
     align-items: flex-start;
