--- a/src/styles/Popup.module.scss
+++ b/src/styles/Popup.module.scss
@@ -1,7 +1,12 @@
 .popup {
   width: 100%;
   height: auto;
-  background-color: var(--grey);
+  min-height: 100vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url("https://ik.imagekit.io/obelussoft/Revio/background2_MWQRvqSBm.jpg?updatedAt=1685350593779");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
   box-shadow: 24;
   display: flex;
   flex-direction: column;
@@ -10,34 +15,24 @@
   gap: 2rem;
   color: #fff;
   z-index: 999;
-  border: 2px solid var(--green);
+  border-bottom: 2px solid var(--green);
   overflow: auto;
-  min-height: calc(100vh - 120px);
-  margin-top: 120px;
   padding: 4rem 6rem;
+  overflow: hidden;
 
   @media (max-width: 1150px) {
     flex-wrap: wrap;
     height: 100%;
   }
 
-  @media (max-width: 900px) {
-    padding: 2rem 3rem;
+  @media (max-width: 700px) {
+    padding: 2rem;
   }
 
-  @media (max-width: 880px) {
-    margin-top: 140px;
-    min-height: calc(100vh - 140px);
-  }
-
-  @media (max-width: 682px) {
-    margin-top: 170px;
-    min-height: calc(100vh - 170px);
-  }
-
-  @media (max-width: 479px) {
-    margin-top: 80px;
-    min-height: calc(100vh - 80px);
+  .logo {
+    width: 300px;
+    height: 100%;
+    object-fit: contain;
   }
 
   .closeIcon {
@@ -169,7 +164,7 @@
 
     p {
       font-size: 0.9rem;
-      color: grey;
+      color: #fff;
     }
   }
 }
