--- a/src/styles/Input.module.scss
+++ b/src/styles/Input.module.scss
@@ -3,7 +3,11 @@
   justify-content: flex-start;
   align-items: flex-start;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
+
+  p {
+    margin-left: 1rem;
+  }
 
   .inputStyle {
     width: 100%;
@@ -29,24 +33,6 @@
         min-width: auto;
       }
     }
-
-    button {
-      width: 100%;
-      min-width: 180px;
-      max-width: 200px;
-      outline: none;
-      border: none;
-      border-top-right-radius: 20px;
-      border-bottom-right-radius: 20px;
-      padding: 0.8rem 1rem;
-      background-color: var(--yellow);
-      font-size: 1rem;
-      font-weight: bold;
-      -webkit-box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.15);
-      -moz-box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.15);
-      box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.15);
-      cursor: pointer;
-    }
   }
 
   .inputBox {
@@ -55,11 +41,36 @@
     align-items: center;
     gap: 10px;
     padding: 0;
+    margin-bottom: 10px;
 
     img {
       width: 40px;
       height: 40px;
       padding: 0;
+    }
+
+    button {
+      width: 100%;
+      min-width: 250px;
+      max-width: 250px;
+      outline: none;
+      border: none;
+      border-top-right-radius: 15px;
+      border-bottom-right-radius: 15px;
+      border-top-left-radius: 15px;
+      border-bottom-left-radius: 15px;
+      padding: 0.8rem 1rem;
+      background-color: var(--yellow);
+      font-size: 1rem;
+      font-weight: bold;
+      -webkit-box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.15);
+      -moz-box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.15);
+      box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.15);
+      cursor: pointer;
+
+      @media (max-width: 400px) {
+        min-width: 200px;
+      }
     }
   }
 }
