--- a/src/styles/Input.module.scss
+++ b/src/styles/Input.module.scss
@@ -61,12 +61,19 @@
       border-bottom-left-radius: 15px;
       padding: 0.8rem 1rem;
       background-color: var(--yellow);
+      border: 2px solid transparent;
       font-size: 1rem;
       font-weight: bold;
       -webkit-box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.15);
       -moz-box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.15);
       box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.15);
       cursor: pointer;
+      transition: 250ms ease-in-out;
+
+      &:hover {
+        border: 2px solid var(--yellow);
+        background-color: transparent;
+      }
 
       @media (max-width: 400px) {
         min-width: 200px;
