--- a/src/styles/Contacts.module.scss
+++ b/src/styles/Contacts.module.scss
@@ -34,6 +34,10 @@
     align-items: center;
     flex-direction: column;
 
+    @media (max-width: 880px) {
+      padding: 10px;
+    }
+
     .contactsBox {
       width: 100%;
       display: flex;
@@ -55,6 +59,10 @@
         box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.2);
         border-radius: 10px;
         padding: 2rem;
+
+        @media (max-width: 880px) {
+          max-width: 100%;
+        }
 
         input {
           width: 100%;
