--- a/src/styles/Countdown.module.scss
+++ b/src/styles/Countdown.module.scss
@@ -35,6 +35,10 @@
         font-size: calc(1.125rem * var(--smaller));
       }
 
+      @media (max-width: 470px) {
+        width: 130px;
+      }
+
       span {
         display: block;
         font-size: 1.2rem;
@@ -44,16 +48,6 @@
           font-size: calc(3.375rem * var(--smaller));
         }
       }
-    }
-  }
-
-  .emoji {
-    display: none;
-    padding: 1rem;
-
-    span {
-      font-size: 1rem;
-      padding: 0 0.5rem;
     }
   }
 }
