--- a/src/styles/Contacts.module.scss
+++ b/src/styles/Contacts.module.scss
@@ -162,26 +162,32 @@
 
       .agreeBox {
         width: 100%;
+        max-width: 880px;
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: flex-start;
         flex-direction: column;
 
         div {
+          width: 100%;
           display: flex;
           justify-content: flex-start;
           align-items: flex-start;
-          gap: 5px;
+          gap: 10px;
           margin-bottom: 1rem;
+          flex: 0 16px;
 
           input {
-            width: 15px;
+            border: 0;
+            outline: none;
+            width: 28px;
+            min-width: 28px;
           }
         }
 
         p {
           font-size: 0.9rem;
-          color: grey;
+          color: #000;
         }
       }
     }
