--- a/src/styles/Popup.module.scss
+++ b/src/styles/Popup.module.scss
@@ -50,6 +50,8 @@
   h4 {
     font-size: 2rem;
     text-align: center;
+    width: 100%;
+    max-width: 1200px;
 
     @media (max-width: 580px) {
       font-size: 1.5rem;
